--- a/index.html
+++ b/index.html
@@ -37,35 +37,40 @@
     </div>
     </header>
     <main>
-        <section class="skills">
+        <section class="skills container">
             <ul class="skills-list">
                 <li class="skills-list__item">
                     <div class="skill-img"><img src="img/illustration-1.jpg.jpg" alt=""></div>
                     <div class="skill-desc">
-                        <h3 class="skills-h3"></h3>
-                        <p class="skills-p"></p>
+                        <h3 class="skills-h3">ВЕБ-САЙТЫ</h3>
+                        <p class="skills-p">Мир никогда не будет прежним
+                            после того как увидит ваш
+                            сайт!
+                            </p>
                         <a href="" class="btn">Заказать</a>
                     </div>
                 </li>
                 <li class="skills-list__item">
                     <div class="skill-img"><img src="img/illustration-2.jpg.jpg" alt=""></div>
                     <div class="skill-desc">
-                        <h3 class="skills-h3"></h3>
-                        <p class="skills-p"></p>
-                        <a href="" class="btn">Заказать</a>
+                        <h3 class="skills-h3">ПРИЛОЖЕНИЯ</h3>
+                        <p class="skills-p">Покорите топ-10 приложений в
+                            AppStore и Google Play</p>
+                        <a href="" class="btn green">Заказать</a>
                     </div>
                 </li>
                 <li class="skills-list__item">
                     <div class="skill-img"><img src="img/illustration-3.jpg.jpg" alt=""></div>
                     <div class="skill-desc">
-                        <h3 class="skills-h3"></h3>
-                        <p class="skills-p"></p>
-                        <a href="" class="btn">Заказать</a>
+                        <h3 class="skills-h3">ПРЕЗЕНТАЦИИ</h3>
+                        <p class="skills-p">Вы даже не подозреваете,
+                            насколько вы изумительны!</p>
+                        <a href="" class="btn orange">Заказать</a>
                     </div>
                 </li>
             </ul>
         </section>
-        <section class="studio">
+        <section class="studio container">
             <div class="about-us">
                 <div class="about-us-left">
                     <h1>Мы — маленькая, но гордая
@@ -105,7 +110,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="partners">
+            </section>
+            <section class="partners container">
+            <div class="phartners-list">
                 <div class="part-img"><img src="img/logo-1.png.png" alt="1"></div>
                 <div class="part-img"><img src="img/logo-2.png.png" alt="2"></div>
                 <div class="part-img"><img src="img/logo-3.png.png" alt="3"></div>
@@ -113,15 +120,19 @@
             </div>
         </section>
         <section class="contacts">
-            <div class="contacts-wrap">
-                <h3>NЁRDS DESIGN STUDIO</h3>
-                <p class="addres" >191186, Санкт-Петербург, 
-                    ул. Б. Конюшенная, д. 19/8
-                </p>
-                <span class="tel">тел. +7 (812) 275-75-75</span>
-                <a class="btn" href="#">НАПИШИТЕ НАМ</a> 
+            <div class="container myachik">
+                <div class="contacts-wrap">
+                    <h3>NЁRDS DESIGN STUDIO</h3>
+                    <p class="addres" >191186, Санкт-Петербург, 
+                        ул. Б. Конюшенная, д. 19/8
+                        <span class="tel">тел. +7 (812) 275-75-75</span>
+                    </p>
+                    <a class="btn c-btn" href="#">НАПИШИТЕ НАМ</a> 
+                </div>
+                <div class="map-marker">
+                    <img src="img/map-marker.png.png" height="190px" alt="нердс">
+                </div>
             </div>
-            <img src="img/map-marker.png.png" alt="нердс">
         </section>
         <footer>
             <div class="social-media">
